Implement account form modal, refs: #53401

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -29,6 +29,8 @@
                 %li= nav_link t(:maintenance_tasks), admin_maintenance_tasks_path
           = nav_link image_pack_tag("sign_out.svg", class: "logout-icon"), session_destroy_path, :get
         %ul.nav.navbar-nav.navbar-right#profile-button
+          %li 
+            %a{'href': '#/accounts/new', 'data-turbolinks': 'false'} new Account
           = nav_link current_user.username, profile_path
   - unless @breadcrumbs.nil?
     .bread-container
