--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -8,61 +8,95 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="container">
+        <div class="container-fluid">
+
           <div class="row">
-            <div class="col-sm-5">
-              <label name="accountname">{{t "account.accountname"}}</label>
-              <div>
-                <Input @value={{this.changeset.accountname}} @name="accountname"/>
-                <ValidationErrorsList @errors={{this.changeset.error.accountname.validation}}/>
+
+            <div class="col-md-6">
+
+              <div class="row">
+                <div class="form-group-sm col-md-12">
+                  <label name="accountname">{{t "account.accountname"}}</label>
+                  <div>
+                    <Input class="form-control" @value={{this.changeset.accountname}} @name="accountname" />
+                    <ValidationErrorsList @errors={{this.changeset.error.accountname.validation}}/>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="col-sm-5" id="team-power-select">
-              <label name="team">{{t "team"}}</label>
-              <PowerSelect @options={{this.assignableTeams}} @selected={{this.selectedTeam}} @onChange={{this.setSelectedTeam}} @renderInPlace={{true}} @allowClear={{true}} @placeholder={{t "account.form.teamPlaceholder"}} @searchEnabled={{true}} @searchField={{"name"}} as |team|>
-                {{team.name}}
-              </PowerSelect>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-5">
-              <label name="username">{{t "account.username"}}</label>
-              <div>
-                <Input @value={{this.changeset.cleartextUsername}} @name="cleartextUsername"/>
+
+              <div class="row">
+                <div class="form-group col-md-12">
+                  <label name="username">{{t "account.username"}}</label>
+                  <div>
+                    <Input class="form-control" @value={{this.changeset.cleartextUsername}} @name="cleartextUsername"/>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div id="group-power-select" class="col-sm-5">
-              <label name="folder">{{t "folder"}}</label>
-              <PowerSelect @options={{this.groups}} @selected={{this.changeset.group}} @disabled={{this.isGroupDropdownDisabled}} @renderInPlace={{true}} @onChange={{this.setGroup}} @allowClear={{true}} @placeholder={{t "account.form.folderPlaceholder"}} @searchEnabled={{true}} @searchField={{"name"}} as |group|>
-                {{group.name}}
-              </PowerSelect>
-              <ValidationErrorsList @errors={{this.changeset.error.group.validation}}/>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-8">
-              <label name="password">{{t "account.password"}}</label>
-              <div>
-                <Input @value={{this.changeset.cleartextPassword}} @name="cleartextPassword" @type="password"/>
-                <button {{on "click" this.setRandomPassword}}>{{t "randomPassword"}}</button>
+
+              <div class="row">
+
+                <div class="col-md-12">
+                  <label name="password">{{t "account.password"}}</label>
+                </div>
+
+                <div class="d-flex col-sm-12">
+
+                  <div class="form-group col-sm-6">
+                    <div class="row">
+                      <Input class="form-control " @value={{this.changeset.cleartextPassword}} @name="cleartextPassword" @type="password"/>
+                    </div>
+                  </div>
+
+                  <div class="form-group col-xs-12 col-sm-5 pull-right">
+                    <div class="row">
+                      <button class="btn btn-primary btn-block" {{on "click" this.setRandomPassword}}>{{t "randomPassword"}}</button>
+                    </div>
+                  </div>
+                </div>
+
               </div>
+
             </div>
-          </div>
-          <div class="row">
-            <div class="col-sm">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <label name="description">{{t "account.description"}}</label>
-              <div>
-                <Textarea @value={{this.changeset.description}} @name="description"/>
-                <ValidationErrorsList @errors={{this.changeset.error.description.validation}}/>
+
+
+            <div class="col-md-6">
+
+              <div class="row">
+                <div class="form-group col-md-12" id="team-power-select">
+                  <label name="team">{{t "team"}}</label>
+                  <PowerSelect @options={{this.assignableTeams}} @selected={{this.selectedTeam}} @onChange={{this.setSelectedTeam}} @renderInPlace={{true}} @allowClear={{true}} @placeholder={{t "account.form.teamPlaceholder"}} @searchEnabled={{true}} @searchField={{"name"}} as |team|>
+                    {{team.name}}
+                  </PowerSelect>
+                </div>
               </div>
+
+              <div class="row">
+                <div id="group-power-select" class="form-group col-md-12">
+                  <label name="folder">{{t "folder"}}</label>
+                  <PowerSelect class="form-control" @options={{this.groups}} @selected={{this.changeset.group}} @disabled={{this.isGroupDropdownDisabled}} @renderInPlace={{true}} @onChange={{this.setGroup}} @allowClear={{true}} @placeholder={{t "account.form.folderPlaceholder"}} @searchEnabled={{true}} @searchField={{"name"}} as |group|>
+                    {{group.name}}0@
+                  </PowerSelect>
+                  <ValidationErrorsList @errors={{this.changeset.error.group.validation}}/>
+                </div>
+              </div>
+
             </div>
+
           </div>
+
+          <div class="row">
+              <div class="form-group col-md-12">
+                <label name="description">{{t "account.description"}}</label>
+                <div>
+                  <Textarea class="form-control" @value={{this.changeset.description}} @name="description"/>
+                  <ValidationErrorsList @errors={{this.changeset.error.description.validation}}/>
+                </div>
+              </div>
+          </div>
+
         </div>
       </div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" {{on "click" (fn this.submit this.changeset)}}>{{t "save"}}</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">{{t "close"}}</button>
