--- a/frontend/app/styles/app.css
+++ b/frontend/app/styles/app.css
@@ -3,3 +3,20 @@
   color: red;
   font-size: small;
 }
+
+.ember-power-select-trigger {
+  height: 34px;
+  line-height: 2.1;
+}
+
+.vertical-resize {
+  resize: vertical;
+}
+
+#accountFormModalLabel {
+  display:  inline;
+}
+
+#team-power-select {
+  height: 69px;
+}
