make minor buttons secondary

--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -49,7 +49,7 @@
 
                   <div class="form-group col-xs-12 col-sm-5 pull-right">
                     <div class="row">
-                      <button class="btn btn-primary btn-block" {{on "click" this.setRandomPassword}}>{{t "randomPassword"}}</button>
+                      <button class="btn btn-secondary btn-block" {{on "click" this.setRandomPassword}}>{{t "randomPassword"}}</button>
                     </div>
                   </div>
                 </div>
