--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -77,7 +77,7 @@
                 <div id="group-power-select" class="form-group col-md-12">
                   <label name="folder">{{t "folder"}}</label>
                   <PowerSelect @options={{this.availableGroups}} @selected={{this.selectedGroup}} @disabled={{this.isGroupDropdownDisabled}} @renderInPlace={{true}} @onChange={{this.setGroup}} @allowClear={{true}} @placeholder={{t "account.form.folderPlaceholder"}} @searchEnabled={{true}} @searchField={{"name"}} as |group|>
-                    {{group.name}}0@
+                    {{group.name}}
                   </PowerSelect>
                   <ValidationErrorsList @errors={{this.changeset.error.group.validation}}/>
                 </div>
@@ -88,13 +88,13 @@
           </div>
 
           <div class="row">
-              <div class="form-group col-md-12">
-                <label name="description">{{t "account.description"}}</label>
-                <div>
-                  <Textarea class="form-control vertical-resize" @value={{this.changeset.description}} @name="description"/>
-                  <ValidationErrorsList @errors={{this.changeset.error.description.validation}}/>
-                </div>
+            <div class="form-group col-md-12">
+              <label name="description">{{t "account.description"}}</label>
+              <div>
+                <Textarea class="form-control vertical-resize" @value={{this.changeset.description}} @name="description"/>
+                <ValidationErrorsList @errors={{this.changeset.error.description.validation}}/>
               </div>
+            </div>
           </div>
 
         </div>
