--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -4,7 +4,6 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %h1= t '.title', group_name: @group.name, team_name: team.name
-= link_to t('accounts.new.title'), new_account_path(group_id: @group.id), class: 'btn btn-primary pull-right'
 %table.table.table-striped
   %tr
     %th{style: "width: 150px;"}= t '.account'
@@ -14,5 +13,5 @@
     %tr{class: "#{cycle('odd', 'even')}"}
       %td= link_to image_pack_tag( "key.svg" ) + " " + account.accountname, account_path(account)
       %td= h account.description
-      %td.action_icon= link_to image_pack_tag("edit.svg"), edit_account_path(account)
+      %td.action_icon= link_to image_pack_tag("edit.svg"), "#/accounts/edit/#{account.id}",'data-turbolinks': 'false'
       %td.action_icon= link_to_destroy account_path(account), account
