--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -65,7 +65,7 @@
             <div class="col-md-5">
 
               <div class="row">
-                <div class="form-group col-md-12" id="team-power-select">
+                <div class="col-md-12" id="team-power-select">
                   <label name="team">{{t "team"}}</label>
                   <PowerSelect class="mb-1" @options={{this.assignableTeams}} @selected={{this.selectedTeam}} @onChange={{this.setSelectedTeam}} @renderInPlace={{true}} @allowClear={{true}} @placeholder={{t "account.form.teamPlaceholder"}} @searchEnabled={{true}} @searchField={{"name"}} as |team|>
                     {{team.name}}
@@ -74,7 +74,7 @@
               </div>
 
               <div class="row">
-                <div id="group-power-select" class="form-group col-md-12">
+                <div id="group-power-select" class="col-md-12">
                   <label name="folder">{{t "folder"}}</label>
                   <PowerSelect @options={{this.availableGroups}} @selected={{this.selectedGroup}} @disabled={{this.isGroupDropdownDisabled}} @renderInPlace={{true}} @onChange={{this.setGroup}} @allowClear={{true}} @placeholder={{t "account.form.folderPlaceholder"}} @searchEnabled={{true}} @searchField={{"name"}} as |group|>
                     {{group.name}}
