--- a/app/webpacker/src/stylesheets/team.scss
+++ b/app/webpacker/src/stylesheets/team.scss
@@ -1,12 +1,4 @@
-.teams-content{
-  padding-top: 20px;
-}
-
-.teams-nav{
-  width: 1000px;
-  margin: 0 auto;
-}
-
-#group-button{
+#group-button {
   margin-bottom: 15px;
+  margin-left: 3%;
 }
