--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -59,7 +59,7 @@
             </div>
 
             <div class="col-md-1">
-
+              <!-- Spacer -->
             </div>
 
             <div class="col-md-5">
