--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -16,7 +16,7 @@
         %td= link_to image_pack_tag( "encrypted_small.svg" ) + " #{team.name}", team_path( team )
       - else
         %td= link_to image_pack_tag( "members.svg" ) + " #{team.name}", team_path( team )
-      %td= simple_format team.description
+      %td= h simple_format team.description
       %td.action_icon= link_to image_pack_tag( "edit.svg" ), edit_team_path( team )
       - if policy(team).destroy?
         %td.action_icon= link_to_destroy team_path(team), team
