--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -3,8 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-= link_to image_pack_tag("edit.svg"), edit_account_path(@account.id), id: 'edit_account_button', class: 'btn btn-secondary pull-right'
-= link_to 'Move', '#', class: 'btn btn-primary pull-right', id: 'move_account_button'
+= link_to image_pack_tag("edit.svg"), "#/accounts/edit/#{@account.id}", id: 'edit_account_button', class: 'btn btn-secondary pull-right','data-turbolinks': 'false'
 %h1= t '.title', account_name: @account.accountname
 %div
   %p.description-text
@@ -41,6 +40,3 @@
           = link_to image_pack_tag("file.svg") + item.filename, account_item_path(@account, item)
         %td{valign: "top"}= simple_format item.description
         %td.action_icon= link_to_destroy account_item_path(@account, item), item
-
-%div{id: "move_account_form"}
-  = render 'move_account_form'
