--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-= link_to image_pack_tag("edit.svg"), "#/accounts/edit/#{@account.id}", id: 'edit_account_button', class: 'btn btn-secondary pull-right','data-turbolinks': 'false'
+= link_to image_pack_tag("edit.svg"), "#/accounts/edit/#{@account.id}", id: 'edit_account_button', class: 'btn btn-secondary pull-right edit_button','data-turbolinks': 'false'
 %h1= t '.title', account_name: @account.accountname
 %div
   %p.description-text
