--- a/app/views/admin/maintenance_tasks/removed_ldap_users/_removed_ldap_users.html.haml
+++ b/app/views/admin/maintenance_tasks/removed_ldap_users/_removed_ldap_users.html.haml
@@ -16,7 +16,7 @@
       %td= user.ldap_uid.to_s
       %td.action_icon
         = link_to image_pack_tag("remove.svg"), '#',
-          data: { last_teammember_teams_link: last_teammember_teams_teams_path(user_id: user.id),
+          data: { last_teammember_teams_link: last_member_teams_path(user_id: user.id),
             user_id: user.id},
           class: 'delete_user_link'
 
