--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -34,7 +34,7 @@
       %td.action_icon
         - if policy(user).destroy?
           = link_to image_pack_tag("remove.svg"), '#',
-            data: { last_teammember_teams_link: last_teammember_teams_teams_path(user_id: user.id),
+            data: { last_teammember_teams_link: last_member_teams_path(user_id: user.id),
               user_id: user.id},
             class: 'delete_user_link'
 - if User::Human.locked.count != 0
