--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -36,13 +36,14 @@
                   <div class="form-group col-sm-6">
                     <div class="row">
                       <Input class="form-control mb-10" @value={{mut this.changeset.cleartextPassword}} @name="cleartextPassword" @type="password" @key-up={{action "updatePasswordScore"}}/>
-                      {{ember-progress-bar progress=this.passwordScore options=(hash strokeWidth=3 duration=0)}}
+                      <label>Your Password's strength:</label>
+                      {{ember-progress-bar class="mb-10" id="wrapper" progress=this.passwordScore options=(hash strokeWidth=3 duration=0)}}
+                      <label>{{this.passwordLabel}}</label>
                     </div>
                   </div>
                   <div class="form-group col-xs-12 col-sm-5 pull-right">
                     <div class="row">
                       <button class="btn btn-secondary btn-block" {{on "click" this.setRandomPassword}}>{{t "randomPassword"}}</button>
-                      <label>{{this.passwordLabel}}</label>
                     </div>
                   </div>
                 </div>
