Update rails to 6.0.3.1

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,10 +11,10 @@
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}/
     %meta{content: "width=device-width, initial-scale=1", name: "viewport"}/
     %link{href: "/favicon.png", rel: "shortcut icon", type: "image/png"}/
-    %link{href: "http://localhost:4200/app/assets/vendor.css", media: "all", rel: "stylesheet"}
-    %link{href: "http://localhost:4200/app/assets/frontend.css", media: "all", rel: "stylesheet"}
-    %script{src: "http://localhost:4200/app/assets/vendor.js", defer: "true"}
-    %script{src: "http://localhost:4200/app/assets/frontend.js", defer: "true"}
+    %link{href: "/ember/assets/vendor-6e7c00a692200f53ea36e9a1b5851acd.css", media: "all", rel: "stylesheet"}
+    %link{href: "/ember/assets/frontend-916f1ef3358c270a185dc60a68f2e21d.css", media: "all", rel: "stylesheet"}
+    %script{src: "/ember/assets/vendor-390bfd1a166787bcefaec74a6751cec3.js", defer: "true"}
+    %script{src: "/ember/assets/frontend-4386aad1dd02b2606c7fe9d2ca27bc25.js", defer: "true"}
     = csrf_meta_tags
     %title Cryptopus
     = stylesheet_link_tag :application, media: "all", nonce: true
