--- a/app/assets/javascripts/templates/last_teammember_teams.hbs.erb
+++ b/app/assets/javascripts/templates/last_teammember_teams.hbs.erb
@@ -15,7 +15,7 @@ https://github.com/puzzle/cryptopus.
   </tr>
   {{#each .}}
     <tr class='team_row'>
-      <td>{{name}}</td>
+      <td>{{attributes.name}}</td>
       <td><div style='visibility:hidden' id='last_teammember_team_id'>{{id}}</div></td>
       <td class='action_icon'>
         <a data-last-team-id={{id}} id='delete_last_teammember_team_link' href='#'>
