--- a/app/assets/javascripts/templates/search/account_full.hbs.erb
+++ b/app/assets/javascripts/templates/search/account_full.hbs.erb
@@ -6,19 +6,19 @@ https://github.com/puzzle/cryptopus. }}
 <li class="result">
   <div class="result-description">
     <h1 class="result-title">
-      <a href="accounts/{{id}}">{{accountname}}</a><br>
+      <a href="accounts/{{id}}">{{attributes.accountname}}</a><br>
     </h1>
     <br>
     <span>
-      <a href="/teams/{{team_id}}">{{team_name}}</a>
+      <a href="/teams/{{attributes.team_id}}">{{attributes.team_name}}</a>
       /
-      <a href="/teams/{{team_id}}/groups/{{group_id}}">{{group_name}}</a>
+      <a href="/teams/{{attributes.team_id}}/groups/{{relationships.group.data.id}}">{{attributes.group_name}}</a>
     </span>
   </div>
   <br>
   <div class="result-action">
     <div class="result-username select-click">
-      <input id="username_{{id}}" type="text" value="{{cleartext_username}}" class="form-control" readonly>
+      <input id="username_{{id}}" type="text" value="{{attributes.cleartext_username}}" class="form-control" readonly>
       <button class="btn clip_button" data-clipboard-target="#username_{{id}}" title="Click to copy">
         <svg class="icon-clippy">
           <use xlink:href="#icon-clippy"></use>
@@ -28,7 +28,7 @@ https://github.com/puzzle/cryptopus. }}
 
     <a href="#" class="password-show">Show password</a>
     <div class="result-password select-click">
-      <input id="password_{{id}}"type="text" class="password-hidden form-control" value="{{cleartext_password}}" readonly>
+      <input id="password_{{id}}"type="text" class="password-hidden form-control" value="{{attributes.cleartext_password}}" readonly>
       <button class="btn clip_button" data-clipboard-target="#password_{{id}}" title="Click to copy">
         <svg class="icon-clippy">
           <use xlink:href="#icon-clippy"></use>
