--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -9,11 +9,8 @@
       </div>
       <div class="modal-body">
         <div class="container-fluid">
-
           <div class="row">
-
             <div class="col-md-6">
-
               <div class="row">
                 <div class="form-group col-md-12">
                   <label name="accountname">{{t "account.accountname"}}</label>
@@ -23,7 +20,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="row">
                 <div class="form-group col-md-12">
                   <label name="username">{{t "account.username"}}</label>
@@ -32,34 +28,25 @@
                   </div>
                 </div>
               </div>
-
               <div class="row">
-
                 <div class="col-md-12">
                   <label name="password">{{t "account.password"}}</label>
                 </div>
-
                 <div class="d-flex col-sm-12">
-
                   <div class="form-group col-sm-6">
                     <div class="row">
                       <Input class="form-control " @value={{this.changeset.cleartextPassword}} @name="cleartextPassword" @type="password"/>
                     </div>
                   </div>
-
                   <div class="form-group col-xs-12 col-sm-5 pull-right">
                     <div class="row">
                       <button class="btn btn-secondary btn-block" {{on "click" this.setRandomPassword}}>{{t "randomPassword"}}</button>
                     </div>
                   </div>
                 </div>
-
               </div>
-
             </div>
-
             <div class="col-md-5">
-
               <div class="row">
                 <div class="col-md-12" id="team-power-select">
                   <label name="team">{{t "team.team"}}</label>
@@ -72,17 +59,14 @@
               <div class="row">
                 <div id="group-power-select" class="col-md-12">
                   <label name="folder">{{t "folder"}}</label>
-                  <PowerSelect @options={{this.availableGroups}} @selected={{this.selectedGroup}} @disabled={{this.isGroupDropdownDisabled}} @renderInPlace={{true}} @onChange={{this.setGroup}} @allowClear={{true}} @placeholder={{t "account.form.folderPlaceholder"}} @searchEnabled={{true}} @searchField={{"name"}} as |group|>
+                  <PowerSelect @options={{this.availableGroups}} @selected={{this.changeset.group}} @disabled={{this.isGroupDropdownDisabled}} @renderInPlace={{true}} @onChange={{this.setGroup}} @allowClear={{true}} @placeholder={{t "account.form.folderPlaceholder"}} @searchEnabled={{true}} @searchField={{"name"}} as |group|>
                     {{group.name}}
                   </PowerSelect>
-                  <ValidationErrorsList @errors={{this.changeset.error.groupId.validation}}/>
+                  <ValidationErrorsList @errors={{this.changeset.error.group.validation}}/>
                 </div>
               </div>
-
             </div>
-
           </div>
-
           <div class="row">
             <div class="form-group col-md-12">
               <label name="description">{{t "account.description"}}</label>
@@ -92,10 +76,8 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
-
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" {{on "click" (fn this.submit this.changeset)}}>{{t "save"}}</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">{{t "close"}}</button>
