--- a/app/views/folders/show.html.haml
+++ b/app/views/folders/show.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-%h1= t '.title', group_name: @group.name, team_name: team.name
+%h1= t '.title', folder_name: @folder.name, team_name: team.name
 %table.table.table-striped
   %tr
     %th{style: "width: 150px;"}= t '.account'
