--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -13,7 +13,7 @@
       %a{"data-toggle" => "tab", href: "#accounts-result"}
         = t('accounts.title')
     %li#groups.tab
-      %a{"data-toggle" => "tab", href: "#groups-result"}
+      %a{"data-toggle" => "tab", href: "#folders-result"}
         = t('groups.title')
     %li#teams.tab
       %a{"data-toggle" => "tab", href: "#teams-result"}
