--- a/app/assets/javascripts/templates/search/folders_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/folders_result_entries.hbs.erb
@@ -4,10 +4,10 @@ See the COPYING file at the top-level directory or at
 https://github.com/puzzle/cryptopus. }}
 
 {{#each .}}
-  <a href="/teams/{{team_id}}/groups/{{id}}/accounts">
+  <a href="/teams/{{team_id}}/folders/{{id}}/accounts">
     <li class="result-small">
       <div class="result-description">
-         <%= image_tag("folder_open.svg", class:"result-type-icon", alt:"Group" ) %>
+         <%= image_tag("folder_open.svg", class:"result-type-icon", alt:"Folder" ) %>
          <h1 class="result-title-small">{{attributes.name}}</h1>
       </div>
     </li>
