--- a/app/assets/javascripts/templates/search/teams_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/teams_result_entries.hbs.erb
@@ -4,10 +4,10 @@ See the COPYING file at the top-level directory or at
 https://github.com/puzzle/cryptopus. }}
 
 {{#each .}}
-  <a href="/teams/{{id}}/groups">
+  <a href="/teams/{{id}}/folders">
     <li class="result-small">
       <div class="result-description">
-        <%= image_tag("members.svg", class:"result-type-icon", alt:"Group" ) %>
+        <%= image_tag("members.svg", class:"result-type-icon", alt:"Folder" ) %>
         <h1 class="result-title-small">{{attributes.name}}</h1>
       </div>
     </li>
