--- a/app/views/folders/_form.html.haml
+++ b/app/views/folders/_form.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-= form_for([team, @group], role: 'form') do |f|
+= form_for([team, @folder], role: 'form') do |f|
   = f.error_messages
   .form-group
     = f.label :name
@@ -12,4 +12,4 @@
     = f.label :description
     = f.text_area :description, class: 'form-control'
   = f.submit @submit_button_text, class: 'btn btn-primary'
-  =link_to "Cancel", team_groups_path(team_id: params[:team_id] ), {:class=>"btn btn-primary"}
+  =link_to "Cancel", team_folders_path(team_id: params[:team_id] ), {:class=>"btn btn-primary"}
